--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,11 +5,8 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<h1>{{ name }}</h1>
-	<footer>
-		<p>
-			Copyright {{ currentYear }}
-		</p>
-	</footer>
+	{{> header }}
+
+	{{> footer }}
 </body>
 </html>
