--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,8 @@
 <header>
-	<h1>{{ toTitleCase name }}</h1>
+	<h1>{{ name }}</h1>
 	<p>
-		<a href="/">Home</a>
+		<a href="/">Index</a>
+		<a href="/home">Home</a>
 		<a href="/about">About</a>
 	</p>
 </header>
